# twixtools

./: .gitignore  LICENSE  README.md  evaluation_compr.ipynb  extra_requirements.txt  pyproject.toml  raw_compression_T2.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test_action.yml
demo/: print_parameters.py  recon_example.ipynb
eval_rawcompr/: compr_results.json  evaluation_compr.ipynb  evaluation_compr_T2.ipynb  evaluation_compr_resstate.ipynb  gcc_mtx.npy  scc_mtx.npy
test/: stats  test_cc.py  test_lossless.py  test_maptwix.py  test_recreate.py  test_writetwix.py  test_zfp.py
twixtools/: __init__.py  geometry.py  hdr_def.py  helpers.py  map_twix.py  mdb.py  mdh_def.py  pmu.py  quat.py  recon_helpers.py  seqdata.py  test.py  twixprot.py  twixtools.py  twixzip.py
twixtools/utils/: convert_to_cfl.py  datmeta2json.py  rotate_3Dcfl.py  twix_starttime.py
utils/: convert_to_cfl.py  dathdr2json.py  datmeta2json.py  rotate_3Dcfl.py
