[metadata]
name = twixtools
version = 1.0
author = Philipp Ehses
author_email = philipp.ehses@dzne.de
description = file reader for Siemens twix(.dat)-files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pehses/twixtools
keywords = 
    twix,
    siemens,
    mri
license = MIT

[options]
python_requires = >=3.7, <4
install_requires =
    numpy
    scipy
    matplotlib
    tqdm
packages =
    twixtools
    twixtools/contrib
scripts =
    twixtools/twixzip.py
    utils/convert_to_cfl.py
    utils/rotate_3Dcfl.py
    utils/datmeta2json.py
zip_safe = false
test_suite = test

[options.extras_require]
test = 
    pytest
    tables
    pyzfp

[flake8]
max-line-length = 127
exclude = twixtools/twixzip.py
max-complexity = 10
